--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,22 @@
 services:
-  mysql:
-    image: 'mysql:latest'
+  db:
+    container_name: postgres
+    image: postgres:latest
     environment:
-      - 'MYSQL_DATABASE=trofoscan_db'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      PGDATA: /data/postgres
+    volumes:
+      - db:/data/postgres
     ports:
-      - '3306:3306'
+      - "5332:5432"
+    networks:
+      - db
+    restart: unless-stopped
+
+networks:
+  db:
+    driver: bridge
+
+volumes:
+  db:
