Working Image Upload Controller with GET & POST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=rate-my-bite
+file.upload-dir=C:\\Users\\Alex\\Documents\\Spring Boot Tutorial\\RateMyBite\\images
 spring.datasource.url=jdbc:postgresql://localhost:5332/ratemybite
 spring.datasource.username=user
 spring.datasource.password=password
