--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=rate-my-bite
-file.upload-dir=C:\\Users\\Alex\\Documents\\Spring Boot Tutorial\\RateMyBite\\images
+file.upload-dir=C:/Users/Alex/Documents/Spring Boot Tutorial/RateMyBite/images
+file.no-image-available-path=defaults/no-image-available.png
 spring.datasource.url=jdbc:postgresql://localhost:5332/ratemybite
 spring.datasource.username=user
 spring.datasource.password=password
