--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=rate-my-bite
-file.upload-dir=C:/Users/Alex/Documents/Spring Boot Tutorial/RateMyBite/images
-file.no-image-available-path=defaults/no-image-available.png
-spring.datasource.url=jdbc:postgresql://localhost:5332/ratemybite
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+file.upload-dir=${FILE_UPLOAD_DIR:uploads/images}
+file.no-image-available-path=${FILE_NO_IMAGE_AVAILABLE_PATH:defaults/no-image-available.png}
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:create-drop}
+.application.name=rate-my-bite
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
