--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ file.upload-dir=${FILE_UPLOAD_DIR:uploads/images}
 file.no-image-available-path=${FILE_NO_IMAGE_AVAILABLE_PATH:defaults/no-image-available.png}
 
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:create-drop}
-.application.name=rate-my-bite
+application.name=rate-my-bite
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
