--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=rate-my-bite
-file.upload-dir=C:/Users/Alex/Documents/Spring Boot Tutorial/RateMyBite/images
+# Path to the directory where images will be uploaded: change accordingly
+file.upload-dir=C:/Users/alexk/Documents/Github Desktop/ratemybite-api/images
 file.no-image-available-path=defaults/no-image-available.png
 spring.datasource.url=jdbc:postgresql://localhost:5332/ratemybite
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
